11861 hostbridge topo module should be hardened to handle empty busses Reviewed by: Yuri Pankov <ypankov@fastmail.com> Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Paul Winder <paul@winders.demon.co.uk> Approved by: Joshua M. Clulow <josh@sysmgr.org>